tests/baselines/reference/assignmentCompatability29.errors.txt
assignmentCompatability29.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignmentCompatability29.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignmentCompatability29.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type '{ one: any[]; }'.
  Types of property 'one' are incompatible.
    Type 'number' is not assignable to type 'any[]'.


==== assignmentCompatability29.ts (3 errors) ====
    module __test1__ {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var aa:{one:any[];};;
        export var __val__aa = aa;
    }
    __test2__.__val__aa = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type '{ one: any[]; }'.
!!! error TS2322:   Types of property 'one' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'any[]'.